# utf8-supported

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/: is_utf8.rs  run_subprocess.rs
src/: lib.rs
